# FFmpeg

./: build_android.sh  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/mo/example/ffmpeg/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ffmpeg/: android_log.h  cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_opt.c  ffmpeg_thread.c
app/src/main/java/mo/example/ffmpeg/ffmpegdemo/: AudioPlayer.java  AudioRecorder.kt  CropActivity.kt  FFmpegCmd.java  FFmpegUtil.kt  MainActivity.kt  MixActivity.kt  PcmPlayerActivity.kt  ScrollWaveformView.kt  ShiTingActivity.kt  Util.kt  WavFileHeader.kt  WavFileReader.kt  WavFileWriter.kt  WaveIndicatorView.kt  WaveSurfaceView.kt  WaveView.kt  WaveformView.kt
app/src/main/res/layout/: activity_crop.xml  activity_main.xml  activity_mix.xml  activity_pcm_player.xml  activity_shi_ting.xml
app/src/test/java/mo/example/ffmpeg/ffmpegdemo/: ExampleUnitTest.kt
audioeditor/: build.gradle  build_android.sh
audioeditor/src/main/: AndroidManifest.xml
audioeditor/src/main/cpp/ffmpeg/: android_log.h  cmdutils.c  config.h  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_filter.c  ffmpeg_opt.c  ffmpeg_thread.h
audioeditor/src/main/java/fm/qingting/audioeditor/: AudioAverageMixer.kt  AudioPlayer.java  AudioPlayer.kt  AudioRecorderImpl.kt  AudioUtils.java  CmdList.kt  FFmpegCmd.java  FFmpegUtil.kt  IAudioMixer.kt  IAudioPlayer.kt  IAudioRecorder.kt  PcmPlayer.kt  WavFileHeader.kt  WavFileReader.kt  WavFileWriter.kt
audioeditor/src/test/java/fm/qingting/audioeditor/: ExampleUnitTest.java
